replace Twitter with BlueSky

--- a/code_of_conduct.qmd
+++ b/code_of_conduct.qmd
@@ -5,9 +5,8 @@ description: |
 about:
   template: marquee
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com/scompbiol
+    - text: "{{< fa brands bluesky >}}"
+      href: https://bsky.app/profile/sipbscompbiol.bsky.social
     - icon: github
       text: Github
       href: https://github.com/sipbs-compbiol
