--- a/who_we_are.qmd
+++ b/who_we_are.qmd
@@ -5,7 +5,7 @@ description: |
 about:
   template: marquee
   links:
-    - text: "{{< fa brands bluesky >}}"
+    - text: "{{< fa brands bluesky >}} BlueSky"
       href: https://bsky.app/profile/sipbscompbiol.bsky.social
     - icon: github
       text: Github
