add Paolo to list of PhD students

--- a/who_we_are.qmd
+++ b/who_we_are.qmd
@@ -28,8 +28,9 @@ html:
 
 - Kirstyn Beattie (PhD 2023-2026, with Prof Dan Walker)
 - Natasha Frate (PhD 2023-2026, with Prof Dan Walker)
-- Tom Harris (PhD 2020-2024, with Dr Arnaud Javelle)
+- Tom Harris (PhD 2020-2025, with Dr Arnaud Javelle)
 - Julia Monserrat Relano (PhD 2023-2026, University of Lancaster, with Dr Doug Orr)
+- Paolo Savoca (PhD 2025-2028, with Dr Suzie Humphrey)
 
 ## Alumni
 
